tests/ui/coercion/coerce-block-tail-83783.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-block-tail-83783.rs:7:32
   |
LL |     _consume_reference::<i32>(&async { Box::new(7_i32) }.await);
   |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `Box<i32>`
   |
   = note: expected type `i32`
            found struct `Box<i32>`
help: consider unboxing the value
   |
LL |     _consume_reference::<i32>(&*async { Box::new(7_i32) }.await);
   |                                +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
